<resources>
    <string name="app_name">PhotoAlbum</string>
    <string name="action_settings">Settings</string>
    <string name="add_album">Add Album</string>
    <string name="delete_album">Delete Album</string>
    <string name="edit_album_name">Edit Album Name</string>
    <string name="rename_album">Rename Album</string>
    <string name="new_image">New Image</string>
    <string name="please_enter_an_album_name">Please enter an album name</string>
    <string name="view_photo">View Photo</string>
    <string name="add_photo">Add Photo</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="slideshow">Slideshow</string>
    <string name="please_enter_an_image_name">Please enter an image name</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="image">Image:</string>
    <string name="search_photos">Search Photos</string>
    <string name="location_tag">Location Tag</string>
    <string name="please_enter_location_tag">Please enter location tag</string>
    <string name="please_enter_person_tag">Please enter person tag</string>
    <string name="person_tag">Person Tag</string>
    <string name="image_tags">Image Tags</string>
    <string name="image_name">Image Name</string>
    <string name="save">Save</string>
    <string name="location">Location:</string>
    <string name="person">Person:</string>
    <string name="move_photo">Move Photo</string>
</resources>
